# MCP-PIF

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  LAMBDA_USAGE.md  LICENSE  Main.hs  Makefile  README.md  ROADMAP.md  Server.hs  claude-desktop-config.json  deps.edn  docker-compose.yml  echo-test.js  integration-test.js  manifest.json  mcp-config.json  mcp-pif-v2.cabal  package-dxt.sh  package-lock.json  package.json  primitives.json  shadow-cljs.edn  smithery.yaml  start-all.sh  start-dev.js  start-interactive.sh  start-pif.sh  test-clean-protocol.js  test-dynamic-tools.js  test-file-filtering.sh  test-formal-reasoning.js  test-formal-simple.js  test-lambda-debug.js  tsconfig.json
Core/: Encoder.hs  Evaluator.hs  Parser.hs  Syntax.hs  Types.hs
SPECIFICATIONS/: README.md
SPECIFICATIONS/architecture/: overview.md
Tools/: Registry.hs
docs/: ARCHITECTURE.md  CLAUDE_DYNAMIC_TOOLS.md  CLAUDE_EXAMPLES.md  CLAUDE_INSTRUCTIONS.md  DYNAMIC_TOOLS_SUMMARY.md  JOURNAL_SPEC.md  SMART_EDIT_SPEC.md
ml_module/: .coverage  .dockerignore  .env  .env.example  Dockerfile  README.md  TROUBLESHOOTING.md  __init__.py  config.py  diagnose.py  pif_types.py  pytest.ini  requirements.txt  server.py  test-requirements.txt
ml_module/core/: __init__.py  (+6 more)
scripts/: docker-dev.sh  startup.d.ts  startup.d.ts.map  startup.js  startup.js.map  startup.ts  update-structure.js
src/: config.template.ts  config.ts  index.ts
test/: integration.test.ts
test-data/: README.md  config.json  hello.js
test-filtering/: .gitignore  README.md  package.json
(+157 files in other folders)
